# save_book

./: .gitignore  LICENSE  README.md
client/: README.md  pyproject.toml  qidian-save.spec
client/qidian_save/: __init__.py  adb_utils.py  api_client.py  capture_addon.py  cli.py  local_crawl_engine.py  qidian_client.py  zip_utils.py
client/qidian_save/desktop/: app.py
client/qidian_save/desktop/panels/: backup_panel.py  book_detail_panel.py  bookshelf_panel.py  login_panel.py  qd_decrypt_panel.py  qidian_login_panel.py  search_panel.py  usage_panel.py
client/qidian_save/desktop/widgets/: reader.py
client/tests/: test_backup_panel_polling.py  test_cli_regressions.py  test_qd_decrypt_threading.py  test_zip_utils.py
docs/: api.md
docs/superpowers/plans/: 2026-05-30-api-sync-plan.md
docs/superpowers/specs/: 2026-05-30-api-sync-design.md
