[project]
name = "qidian-save"
version = "0.1.0"
description = "起点中文网书籍本地保存工具"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "PyQt6>=6.5",
    "PyQt6-Fluent-Widgets>=1.11",
]

[project.scripts]
qidian-save = "qidian_save.cli:main"

[tool.setuptools.packages.find]
include = ["qidian_save", "qidian_save.*"]
